--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualizador de Perfil do GitHub</title>
 
-    <link rel="stylesheet" href="./src/css/css/reset.css">
-    <link rel="stylesheet" href="./src/css/css/styles.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/styles.css">
     <link rel="stylesheet" href="./src/css/animations.css">
     <link rel="stylesheet" href="./src/css/responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
@@ -30,6 +30,7 @@
             <div class="profile-results"></div>
         </section>
     </main>
+    <script src="./src/js/index.js"></script>
 </body>
 
 </html>
